Fixing couple of layout issues on mobiles

--- a/MVCForum.Website/Themes/Metro/Content/Styles/Theme.css
+++ b/MVCForum.Website/Themes/Metro/Content/Styles/Theme.css
@@ -40,9 +40,8 @@ border-color: #86b54b #86b54b #387038; border-color: rgba(0, 0, 0, 0.1) rgba(0, 
 
 .sidelayoutsection { position: relative;}
 
-.navbar {}
-.navbar-inner {background: none; background-color: #4891dc;border: none;-moz-border-radius:0; -webkit-border-radius:0; -khtml-border-radius:0; border-radius:0;box-shadow: none;padding: 0;}
-.navbar .container {margin-left: auto;margin-right: auto;width: 940px;}
+.navbar { display: block;width: 100%;clear: both;background-color: #4891dc;}
+.navbar-inner {background: none; border: none;-moz-border-radius:0; -webkit-border-radius:0; -khtml-border-radius:0; border-radius:0;box-shadow: none;padding: 0; margin-left: auto;margin-right: auto;width: 940px;}
 .navbar .nav > li > a {color: #fff;text-shadow:none;}
 .navbar .nav > li > a:hover {background-color: #3c7ec3; color: #fff;text-decoration: none;}
 
